--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,14 @@ h1 {
   line-height: 1.5;
 }
 
+h2{
+  line-height: 1.5;
+  font-size: 3rem;
+  font-weight: bold;
+  font-family: "Montserrat"
+
+}
+
 h3 {
   font-weight:bold;
   font-family: "Montserrat"
@@ -73,4 +81,33 @@ p {
 }
 .icon:hover{
   color: #ff4c68;
+}
+
+/* Testimonial Section */
+
+#testimonials{
+  padding: 7% 15%;
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+.testimonial-img{
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+.carousel-item{
+  padding: 7% 15%;
+}
+
+#press{
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo{
+  width: 15%;
+  margin: 20px 20px 50px;
 }
