--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
 h1 {
@@ -62,13 +62,18 @@ p {
 
 /* Title Image */
 .title-img {
+  position: absolute;
   transform: rotate(19deg);
-  width: 60%
+  width: 60%;
+  right: 30%;
+
 }
 
 /* Features */
 #features {
   padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
 }
 
 .feature-box {
@@ -119,4 +124,40 @@ p {
 }
 .pricing-col{
   padding: 3% 2%;
+}
+
+/* CTA Section */
+#cta{
+  background-color: #ff4c68;
+  color: #fff;
+  padding: 7% 15%;
+  text-align: center;
+}
+
+.cta-head{
+  font-weight: bold;
+  font-size: 3.5rem;
+  font-family: "Montserrat";
+  line-height: 1.5;
+}
+
+/* Footer Section */
+#footer {
+  padding: 7% 15%;
+  text-align: center;
+}
+.social-icon{
+  margin: 20px 10px;
+}
+
+@media(max-width:1028px){
+
+  #title{
+    text-align: center;
+  }
+
+  .title-img {
+    position: static;
+    transform: rotate(0);
+  }
 }
