--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,32 @@
 body {
   font-family: "Montserrat";
+  text-align: center;
 }
 
-#title {
-  color: #fff;
-  background-color: #ff4c68;
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+  font-family: "Montserrat"
 }
 
-.container-fluid {
-  padding: 3% 15% 7%;
+p {
+  color: #8f8f8f;
 }
 
-h1 {
+.big-heading {
   font-family: "Montserrat";
   font-weight: 900;
   font-size: 3.5rem;
   line-height: 1.5;
 }
 
-h2{
-  line-height: 1.5;
+.section-heading {
   font-size: 3rem;
-  font-weight: bold;
-  font-family: "Montserrat"
-
+  line-height: 1.5;
 }
 
-h3 {
-  font-weight:bold;
-  font-family: "Montserrat"
-}
-p {
-  color: #8f8f8f;
+/* Containers */
+.container-fluid {
+  padding: 7% 15%;
 }
 
 /* Navigation Bar */
@@ -55,6 +50,17 @@ p {
   font-family: "Montserrat"
 }
 
+/* Title Section */
+#title {
+  color: #fff;
+  background-color: #ff4c68;
+  text-align: left;
+}
+
+#title .container-fluid{
+  padding: 3% 15% 7%;
+}
+
 /* Download Buttons */
 .download {
   margin: 5% 3% 5% 0;
@@ -66,93 +72,85 @@ p {
   transform: rotate(19deg);
   width: 60%;
   right: 30%;
-
 }
 
 /* Features */
 #features {
-  padding: 7% 15%;
   background-color: #fff;
   position: relative;
 }
 
+.feature-title {
+  font-size: 1.5rem;
+}
+
 .feature-box {
-  text-align: center;
   padding: 5%;
 }
-.icon{
+
+.icon {
   color: #ef8172;
   margin-bottom: 1rem;
 }
-.icon:hover{
+
+.icon:hover {
   color: #ff4c68;
 }
 
 /* Testimonial Section */
-
-#testimonials{
-  padding: 7% 15%;
-  text-align: center;
+#testimonials {
   background-color: #ef8172;
   color: #fff;
 }
-.testimonial-img{
+
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.testimonial-img {
   width: 10%;
   border-radius: 100%;
   margin: 20px;
 }
 
-.carousel-item{
-  padding: 7% 15%;
-}
-
-#press{
+#press {
   background-color: #ef8172;
-  text-align: center;
   padding-bottom: 3%;
 }
 
-.press-logo{
+.press-logo {
   width: 15%;
   margin: 20px 20px 50px;
 }
 
 /* Pricing Section */
-#pricing{
+#pricing {
   padding: 100px;
-  text-align: center;
 }
-.pricing-col{
+
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.pricing-col {
   padding: 3% 2%;
 }
 
 /* CTA Section */
-#cta{
+#cta {
   background-color: #ff4c68;
   color: #fff;
-  padding: 7% 15%;
-  text-align: center;
-}
-
-.cta-head{
-  font-weight: bold;
-  font-size: 3.5rem;
-  font-family: "Montserrat";
-  line-height: 1.5;
 }
 
 /* Footer Section */
-#footer {
-  padding: 7% 15%;
-  text-align: center;
-}
-.social-icon{
+.social-icon {
   margin: 20px 10px;
 }
 
-@media(max-width:1028px){
-
-  #title{
+@media(max-width:1028px) {
+  #title {
     text-align: center;
   }
 
